# Threads_Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Task.cpp  Task_Manager.cpp  arguments.cpp  main.cpp
Threads_Manager/: CMakeLists.txt
Threads_Manager/include/: Tasking.h  Threading.h
Threads_Manager/src/: Console.hpp  Task_Manager.cpp  Task_Manager.hpp  Thread.hpp  Threads_Manager.cpp  Threads_Manager.hpp
include/: Image_processing.hpp  Task_Manager.hpp  Tasking.h  arguments.hpp
source/: Task.cpp  Task_Manager.cpp  Task_Manager.hpp  arguments.hpp
src/: Task.cpp  Task_Manager.cpp  main.cpp
